# svm_main-posit1

./: .gitmodules  README.md
cppposit-main/: CMakeLists.txt
datasets/: breast_cancer_test_normalized.csv  breast_cancer_train_normalized.csv  mueta_exp1.csv  mueta_exp2.csv  mueta_exp4.csv
matlab/: lambda.csv  load_BNA.m  load_SONAR.m  load_WDBC.m  mueta.csv  mueta_exp2.csv  mueta_exp3.csv  mueta_exp4.csv  nlsvmpc_ex1.m  nlsvmpc_ex2.m  nlsvmpc_ex3.m  nlsvmpc_ex3_1.m  nlsvmpc_ex4.m
src/: main_lambdas  main_lambdas.cpp  svm_main-posit1.code-workspace
src1/: main_lambdas1  main_lambdas1.cpp
